--- a/cart.html
+++ b/cart.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
     <title>Корзина</title>
@@ -1832,7 +1830,7 @@
                                         </div>
                                     </div>
                                     <div class="cart-item__tags">
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Товар участвует в акции</span>
                                         </a>
@@ -1842,15 +1840,15 @@
                                         <a class="cart-item__tag">
                                             <span class="additional-product">Дозатор</span>&nbsp;<span>в комплекте</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Товар участвует в акции</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Можно получить в подарок</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Можно получить в подарок</span>
                                         </a>
@@ -1968,7 +1966,7 @@
                                         </div>
                                     </div>
                                     <div class="cart-item__tags">
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Товар участвует в акции</span>
                                         </a>
@@ -1978,15 +1976,15 @@
                                         <a class="cart-item__tag">
                                             <span class="additional-product">Дозатор</span>&nbsp;<span>в комплекте</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Товар участвует в акции</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Можно получить в подарок</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Можно получить в подарок</span>
                                         </a>
@@ -2104,7 +2102,7 @@
                                         </div>
                                     </div>
                                     <div class="cart-item__tags">
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Товар участвует в акции</span>
                                         </a>
@@ -2114,15 +2112,15 @@
                                         <a class="cart-item__tag">
                                             <span class="additional-product">Дозатор</span>&nbsp;<span>в комплекте</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Товар участвует в акции</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Можно получить в подарок</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Можно получить в подарок</span>
                                         </a>
@@ -2240,7 +2238,7 @@
                                         </div>
                                     </div>
                                     <div class="cart-item__tags">
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Товар участвует в акции</span>
                                         </a>
@@ -2250,15 +2248,15 @@
                                         <a class="cart-item__tag">
                                             <span class="additional-product">Дозатор</span>&nbsp;<span>в комплекте</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Товар участвует в акции</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Можно получить в подарок</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Можно получить в подарок</span>
                                         </a>
@@ -2376,7 +2374,7 @@
                                         </div>
                                     </div>
                                     <div class="cart-item__tags">
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Товар участвует в акции</span>
                                         </a>
@@ -2386,15 +2384,15 @@
                                         <a class="cart-item__tag">
                                             <span class="additional-product">Дозатор</span>&nbsp;<span>в комплекте</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Товар участвует в акции</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Можно получить в подарок</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Можно получить в подарок</span>
                                         </a>
@@ -2512,7 +2510,7 @@
                                         </div>
                                     </div>
                                     <div class="cart-item__tags">
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Товар участвует в акции</span>
                                         </a>
@@ -2522,15 +2520,15 @@
                                         <a class="cart-item__tag">
                                             <span class="additional-product">Дозатор</span>&nbsp;<span>в комплекте</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Товар участвует в акции</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Можно получить в подарок</span>
                                         </a>
-                                        <a class="cart-item__tag blue" href="#">
+                                        <a class="cart-item__tag blue" href="./action.html">
                                             <img src="./img/icons/action.svg" alt="">
                                             <span>Можно получить в подарок</span>
                                         </a>
@@ -2661,7 +2659,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -2947,7 +2945,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -3233,7 +3231,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -3519,7 +3517,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -3805,7 +3803,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -4325,7 +4323,7 @@
                                 aria-label="Перейти в телеграм-канал компании">
                                 <img src="./img/icons/footer/telegram.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="#"
+                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="https://wa.me/79220328123"
                                 aria-label="Написать в whatsapp">
                                 <img src="./img/icons/footer/whatsapp.svg" alt="">
                             </a>
@@ -5019,8 +5017,8 @@
         </div>
     </div>
 
-    <div id="authRegister" class="modal">
-        <div class="auth__inner">
+    <div id="authRegister" class="modal" data-modal>
+        <div class="auth__inner modal-container" data-modal-container>
             <div class="auth__box auth__box--register">
                 <h4 class="auth__title">
                     Регистрация
@@ -5070,7 +5068,7 @@
                             Хочу зарегистрироваться как юридическое лицо
                         </label>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Зарегистрироваться
                     </button>
                 </form>
@@ -5101,7 +5099,7 @@
                             <span>Код отправлен на номер</span><span class="verify-phone">+7952812</span>
                         </div>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Зарегистрироваться
                     </button>
                 </form>
@@ -5114,8 +5112,8 @@
 
     </div>
 
-    <div id="authLogin" class="modal">
-        <div class="auth__inner">
+    <div id="authLogin" class="modal" data-modal>
+        <div class="auth__inner" data-modal-container>
             <div class="auth__box auth__box--login">
                 <h4 class="auth__title auth__title--login">
                     Вход
@@ -5141,7 +5139,7 @@
                     <a class="auth__form-forgot" href="#">
                         Забыли пароль?
                     </a>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Войти
                     </button>
                 </form>
@@ -5172,7 +5170,7 @@
                             <span>Код отправлен на номер</span><span class="verify-phone">+7952812</span>
                         </div>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Сбросить пароль
                     </button>
                 </form>
