--- a/compare.html
+++ b/compare.html
@@ -4,9 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="./css/nouislider.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
     <title>Сравнение</title>
@@ -1920,7 +1917,7 @@
                             aria-label="Перейти в телеграм-канал компании">
                             <img src="./img/icons/footer/telegram.svg" alt="">
                         </a>
-                        <a class="header-menu-link round-btn round-btn--header-menu whatsapp" href="#"
+                        <a class="header-menu-link round-btn round-btn--header-menu whatsapp" href="https://wa.me/79220328123"
                             aria-label="Написать в whatsapp">
                             <img src="./img/icons/footer/whatsapp.svg" alt="">
                         </a>
@@ -2014,7 +2011,7 @@
                                                     <div class="label-hint">
                                                         <div class="label-hint-content">
                                                             Товар участвует в акции "Комплектом дешеве" <br>
-                                                            <a href="#">Подробности</a>
+                                                            <a href="./action.html">Подробности</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -2337,7 +2334,7 @@
                                                     <div class="label-hint">
                                                         <div class="label-hint-content">
                                                             Товар участвует в акции "Комплектом дешеве" <br>
-                                                            <a href="#">Подробности</a>
+                                                            <a href="./action.html">Подробности</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -2660,7 +2657,7 @@
                                                     <div class="label-hint">
                                                         <div class="label-hint-content">
                                                             Товар участвует в акции "Комплектом дешеве" <br>
-                                                            <a href="#">Подробности</a>
+                                                            <a href="./action.html">Подробности</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -2983,7 +2980,7 @@
                                                     <div class="label-hint">
                                                         <div class="label-hint-content">
                                                             Товар участвует в акции "Комплектом дешеве" <br>
-                                                            <a href="#">Подробности</a>
+                                                            <a href="./action.html">Подробности</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -3306,7 +3303,7 @@
                                                     <div class="label-hint">
                                                         <div class="label-hint-content">
                                                             Товар участвует в акции "Комплектом дешеве" <br>
-                                                            <a href="#">Подробности</a>
+                                                            <a href="./action.html">Подробности</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -3629,7 +3626,7 @@
                                                     <div class="label-hint">
                                                         <div class="label-hint-content">
                                                             Товар участвует в акции "Комплектом дешеве" <br>
-                                                            <a href="#">Подробности</a>
+                                                            <a href="./action.html">Подробности</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -3968,7 +3965,7 @@
                                                     <div class="label-hint">
                                                         <div class="label-hint-content">
                                                             Товар участвует в акции "Комплектом дешеве" <br>
-                                                            <a href="#">Подробности</a>
+                                                            <a href="./action.html">Подробности</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -4291,7 +4288,7 @@
                                                     <div class="label-hint">
                                                         <div class="label-hint-content">
                                                             Товар участвует в акции "Комплектом дешеве" <br>
-                                                            <a href="#">Подробности</a>
+                                                            <a href="./action.html">Подробности</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -4687,7 +4684,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -4973,7 +4970,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -5259,7 +5256,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -5545,7 +5542,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -5831,7 +5828,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -6350,7 +6347,7 @@
                                 aria-label="Перейти в телеграм-канал компании">
                                 <img src="./img/icons/footer/telegram.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="#"
+                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="https://wa.me/79220328123"
                                 aria-label="Написать в whatsapp">
                                 <img src="./img/icons/footer/whatsapp.svg" alt="">
                             </a>
@@ -6967,17 +6964,17 @@
                                     Способы получения заказа
                                 </h5>
                                 <div class="option pickup">
-                                    <a href="#">Самовывоз за 15 минут</a>
+                                    <a href="./delivery.html">Самовывоз за 15 минут</a>
                                     <p>с нашего склада - бесплатно</p>
                                 </div>
                                 <div class="option delivery">
-                                    <a href="#">Доставка до дома</a>
+                                    <a href="./delivery.html">Доставка до дома</a>
                                     <p>
                                         При заказе от 20 000 ₽ доставка по Екатеринбургу - бесплатно
                                     </p>
                                 </div>
                             </div>
-                            <a class="rect-btn rect-btn--brand blue" href="#">
+                            <a class="rect-btn rect-btn--brand blue" href="./brand.html">
                                 Все товары бренда&nbsp;<span>LEX</span>
                             </a>
                         </div>
@@ -7093,7 +7090,7 @@
                             Хочу зарегистрироваться как юридическое лицо
                         </label>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Зарегистрироваться
                     </button>
                 </form>
@@ -7124,7 +7121,7 @@
                             <span>Код отправлен на номер</span><span class="verify-phone">+7952812</span>
                         </div>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Зарегистрироваться
                     </button>
                 </form>
@@ -7164,7 +7161,7 @@
                     <a class="auth__form-forgot" href="#">
                         Забыли пароль?
                     </a>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Войти
                     </button>
                 </form>
@@ -7195,7 +7192,7 @@
                             <span>Код отправлен на номер</span><span class="verify-phone">+7952812</span>
                         </div>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Сбросить пароль
                     </button>
                 </form>
@@ -7234,7 +7231,7 @@
                                 <input type="checkbox" required name="question-checkbox">
                                 <p>
                                     Отправляя форму Вы соглашаетесь с
-                                    <a href="#">обработкой персональных данных и политикой конфеденциальности</a>
+                                    <a href="./confidence.html">обработкой персональных данных и политикой конфеденциальности</a>
                                 </p>
                             </label>
 
