--- a/product.html
+++ b/product.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
     <title>Страница товара</title>
@@ -1919,7 +1917,7 @@
                             aria-label="Перейти в телеграм-канал компании">
                             <img src="./img/icons/footer/telegram.svg" alt="">
                         </a>
-                        <a class="header-menu-link round-btn round-btn--header-menu whatsapp" href="#"
+                        <a class="header-menu-link round-btn round-btn--header-menu whatsapp" href="https://wa.me/79220328123"
                             aria-label="Написать в whatsapp">
                             <img src="./img/icons/footer/whatsapp.svg" alt="">
                         </a>
@@ -2067,11 +2065,11 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешевле" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
-                                    <a class="label special" href="#" style="background-color: #D44F68;">
+                                    <a class="label special" href="./action.html" style="background-color: #D44F68;">
                                         <img src="./img/icons/gift.svg" alt="">
                                         <p>Получить в подарок</p>
                                     </a>
@@ -3279,7 +3277,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -3558,7 +3556,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -3837,7 +3835,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -4116,7 +4114,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -4395,7 +4393,7 @@
                                         <div class="label-hint">
                                             <div class="label-hint-content">
                                                 Товар участвует в акции "Комплектом дешеве" <br>
-                                                <a href="#">Подробности</a>
+                                                <a href="./action.html">Подробности</a>
                                             </div>
                                         </div>
                                     </div>
@@ -4892,7 +4890,7 @@
                                 aria-label="Перейти в телеграм-канал компании">
                                 <img src="./img/icons/footer/telegram.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="#"
+                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="https://wa.me/79220328123"
                                 aria-label="Написать в whatsapp">
                                 <img src="./img/icons/footer/whatsapp.svg" alt="">
                             </a>
@@ -4938,7 +4936,7 @@
                                 <input type="checkbox" required name="question-checkbox">
                                 <p>
                                     Отправляя форму Вы соглашаетесь с
-                                    <a href="#">обработкой персональных данных и политикой конфеденциальности</a>
+                                    <a href="./confidence.html">обработкой персональных данных и политикой конфеденциальности</a>
                                 </p>
                             </label>
 
@@ -5058,7 +5056,7 @@
                             Хочу зарегистрироваться как юридическое лицо
                         </label>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Зарегистрироваться
                     </button>
                 </form>
@@ -5089,7 +5087,7 @@
                             <span>Код отправлен на номер</span><span class="verify-phone">+7952812</span>
                         </div>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Зарегистрироваться
                     </button>
                 </form>
@@ -5129,7 +5127,7 @@
                     <a class="auth__form-forgot" href="#">
                         Забыли пароль?
                     </a>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Войти
                     </button>
                 </form>
@@ -5160,7 +5158,7 @@
                             <span>Код отправлен на номер</span><span class="verify-phone">+7952812</span>
                         </div>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Сбросить пароль
                     </button>
                 </form>
@@ -5769,17 +5767,17 @@
                                     Способы получения заказа
                                 </h5>
                                 <div class="option pickup">
-                                    <a href="#">Самовывоз за 15 минут</a>
+                                    <a href="./delivery.html">Самовывоз за 15 минут</a>
                                     <p>с нашего склада - бесплатно</p>
                                 </div>
                                 <div class="option delivery">
-                                    <a href="#">Доставка до дома</a>
+                                    <a href="./delivery.html">Доставка до дома</a>
                                     <p>
                                         При заказе от 20 000 ₽ доставка по Екатеринбургу - бесплатно
                                     </p>
                                 </div>
                             </div>
-                            <a class="rect-btn rect-btn--brand blue" href="#">
+                            <a class="rect-btn rect-btn--brand blue" href="./brand.html">
                                 Все товары бренда&nbsp;<span>LEX</span>
                             </a>
                         </div>
