--- a/brands.html
+++ b/brands.html
@@ -1915,7 +1915,7 @@
                             aria-label="Перейти в телеграм-канал компании">
                             <img src="./img/icons/footer/telegram.svg" alt="">
                         </a>
-                        <a class="header-menu-link round-btn round-btn--header-menu whatsapp" href="#"
+                        <a class="header-menu-link round-btn round-btn--header-menu whatsapp" href="https://wa.me/79220328123"
                             aria-label="Написать в whatsapp">
                             <img src="./img/icons/footer/whatsapp.svg" alt="">
                         </a>
@@ -2075,7 +2075,7 @@
                     </div>
                     <ul class="products-pagination skeleton">
                         <li class="products-pagination-btn products-pagination-btn-arrow disabled">
-                            <a href="#">
+                            <a href="./brands.html">
                                 <svg width="7" height="12" viewBox="0 0 7 12" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -2085,28 +2085,28 @@
                             </a>
                         </li>
                         <li class="products-pagination-btn current">
-                            <a href="#">1</a>
+                            <a href="./brands.html">1</a>
                         </li>
                         <li class="products-pagination-btn">
-                            <a href="#">2</a>
+                            <a href="./brands.html">2</a>
                         </li>
                         <li class="products-pagination-btn">
-                            <a href="#">3</a>
+                            <a href="./brands.html">3</a>
                         </li>
                         <li class="products-pagination-btn">
-                            <a href="#">4</a>
+                            <a href="./brands.html">4</a>
                         </li>
                         <li class="products-pagination-btn">
-                            <a href="#">5</a>
+                            <a href="./brands.html">5</a>
                         </li>
                         <li class="products-pagination-btn products-pagination-btn--divider">
                             <span>...</span>
                         </li>
                         <li class="products-pagination-btn">
-                            <a href="#">50</a>
+                            <a href="./brands.html">50</a>
                         </li>
                         <li class="products-pagination-btn products-pagination-btn-arrow">
-                            <a href="#">
+                            <a href="./brands.html">
                                 <svg width="7" height="12" viewBox="0 0 7 12" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -2359,7 +2359,7 @@
                                 aria-label="Перейти в телеграм-канал компании">
                                 <img src="./img/icons/footer/telegram.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="#"
+                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="https://wa.me/79220328123"
                                 aria-label="Написать в whatsapp">
                                 <img src="./img/icons/footer/whatsapp.svg" alt="">
                             </a>
@@ -2405,7 +2405,7 @@
                                 <input type="checkbox" required name="question-checkbox">
                                 <p>
                                     Отправляя форму Вы соглашаетесь с
-                                    <a href="#">обработкой персональных данных и политикой конфеденциальности</a>
+                                    <a href="./confidence.html">обработкой персональных данных и политикой конфеденциальности</a>
                                 </p>
                             </label>
 
@@ -2525,7 +2525,7 @@
                             Хочу зарегистрироваться как юридическое лицо
                         </label>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Зарегистрироваться
                     </button>
                 </form>
@@ -2556,7 +2556,7 @@
                             <span>Код отправлен на номер</span><span class="verify-phone">+7952812</span>
                         </div>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Зарегистрироваться
                     </button>
                 </form>
@@ -2596,7 +2596,7 @@
                     <a class="auth__form-forgot" href="#">
                         Забыли пароль?
                     </a>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Войти
                     </button>
                 </form>
@@ -2627,7 +2627,7 @@
                             <span>Код отправлен на номер</span><span class="verify-phone">+7952812</span>
                         </div>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Сбросить пароль
                     </button>
                 </form>
