--- a/catalog.html
+++ b/catalog.html
@@ -1917,7 +1917,7 @@
                             aria-label="Перейти в телеграм-канал компании">
                             <img src="./img/icons/footer/telegram.svg" alt="">
                         </a>
-                        <a class="header-menu-link round-btn round-btn--header-menu whatsapp" href="#"
+                        <a class="header-menu-link round-btn round-btn--header-menu whatsapp" href="https://wa.me/79220328123"
                             aria-label="Написать в whatsapp">
                             <img src="./img/icons/footer/whatsapp.svg" alt="">
                         </a>
@@ -2674,7 +2674,7 @@
                                 aria-label="Перейти в телеграм-канал компании">
                                 <img src="./img/icons/footer/telegram.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="#"
+                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="https://wa.me/79220328123"
                                 aria-label="Написать в whatsapp">
                                 <img src="./img/icons/footer/whatsapp.svg" alt="">
                             </a>
@@ -2720,7 +2720,7 @@
                                 <input type="checkbox" required name="question-checkbox">
                                 <p>
                                     Отправляя форму Вы соглашаетесь с
-                                    <a href="#">обработкой персональных данных и политикой конфеденциальности</a>
+                                    <a href="./confidence.html">обработкой персональных данных и политикой конфеденциальности</a>
                                 </p>
                             </label>
 
@@ -2863,7 +2863,7 @@
                             Хочу зарегистрироваться как юридическое лицо
                         </label>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Зарегистрироваться
                     </button>
                 </form>
@@ -2894,7 +2894,7 @@
                             <span>Код отправлен на номер</span><span class="verify-phone">+7952812</span>
                         </div>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Зарегистрироваться
                     </button>
                 </form>
@@ -2934,7 +2934,7 @@
                     <a class="auth__form-forgot" href="#">
                         Забыли пароль?
                     </a>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Войти
                     </button>
                 </form>
@@ -2965,7 +2965,7 @@
                             <span>Код отправлен на номер</span><span class="verify-phone">+7952812</span>
                         </div>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Сбросить пароль
                     </button>
                 </form>
