--- a/personal.html
+++ b/personal.html
@@ -2120,7 +2120,7 @@
                                 aria-label="Перейти в телеграм-канал компании">
                                 <img src="./img/icons/footer/telegram.svg" alt="">
                             </a>
-                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="#"
+                            <a class="footer__socials-link round-btn round-btn--footer whatsapp" href="https://wa.me/79220328123"
                                 aria-label="Написать в whatsapp">
                                 <img src="./img/icons/footer/whatsapp.svg" alt="">
                             </a>
@@ -2193,8 +2193,8 @@
         </div>
     </div>
 
-    <div id="authRegister" class="modal">
-        <div class="auth__inner">
+    <div id="authRegister" class="modal" data-modal>
+        <div class="auth__inner modal-container" data-modal-container>
             <div class="auth__box auth__box--register">
                 <h4 class="auth__title">
                     Регистрация
@@ -2244,7 +2244,7 @@
                             Хочу зарегистрироваться как юридическое лицо
                         </label>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Зарегистрироваться
                     </button>
                 </form>
@@ -2275,7 +2275,7 @@
                             <span>Код отправлен на номер</span><span class="verify-phone">+7952812</span>
                         </div>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Зарегистрироваться
                     </button>
                 </form>
@@ -2288,8 +2288,8 @@
 
     </div>
 
-    <div id="authLogin" class="modal">
-        <div class="auth__inner">
+    <div id="authLogin" class="modal" data-modal>
+        <div class="auth__inner" data-modal-container>
             <div class="auth__box auth__box--login">
                 <h4 class="auth__title auth__title--login">
                     Вход
@@ -2315,7 +2315,7 @@
                     <a class="auth__form-forgot" href="#">
                         Забыли пароль?
                     </a>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Войти
                     </button>
                 </form>
@@ -2346,7 +2346,7 @@
                             <span>Код отправлен на номер</span><span class="verify-phone">+7952812</span>
                         </div>
                     </div>
-                    <button class="rect-btn rect-btn--auth-register" type="submit">
+                    <button class="rect-btn rect-btn--auth-register blue" type="submit">
                         Сбросить пароль
                     </button>
                 </form>
