--- a/sitemap.html
+++ b/sitemap.html
@@ -25,13 +25,13 @@
             <a href="./category.html">Страница категории</a>
         </li>
         <li>
-            <a href="./compare.html">Страница сравнения</a>
+            <a href="./compare.html">Страница сравнения (с двумя состояниями: пустая и с товарами)</a>
         </li>
         <li>
             <a href="./index.html">Главная страница</a>
         </li>
         <li>
-            <a href="./order.html">Страница оформления заказа</a>
+            <a href="./order.html">Страница оформления заказа (с двумя состояниями: само оформление и сообщение о том, что заказ оформление)</a>
         </li>
         <li>
             <a href="./personal.html">Личный кабинет</a>
@@ -40,13 +40,16 @@
             <a href="./product.html">Страница товара</a>
         </li>
         <li>
-            <a href="./favorites.html">Страница избранного</a>
+            <a href="./favorites.html">Страница избранного (с двумя состояниями: пустая и с товарами)</a>
         </li>
         <li>
-            <a href="./search.html">Страница поиска</a>
+            <a href="./search.html">Страница поиска (с двумя состояниями: пустая и с товарами)</a>
         </li>
         <li>
-            <a href="./brands.html">Страница поиска</a>
+            <a href="./brands.html">Страница брендов</a>
+        </li>
+        <li>
+            <a href="./brand.html">Страница бренда</a>
         </li>
     </ul>
 </body>
